# TailorLoop

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/latex-resume/: SKILL.md
examples/: jd_backend_engineer.txt
profile/: experience.json  meta.json  projects.json  skills.json
src/tailorloop/: cli.py  compile.py  config.py  graph.py  loaders.py  models.py  render.py
src/tailorloop/agents/: cover_letter_writer.py  jd_analyzer.py  resume_tailor.py  verifier.py
src/tailorloop/api/: app.py  generate.py
src/tailorloop/db/: __init__.py  crud.py  database.py
src/tailorloop/llm/: __init__.py  cache.py  client.py
src/tailorloop/prompts/: cover_letter_writer.py  jd_analyzer.py  resume_tailor.py  verifier.py
templates/: cover_letter.tex.j2  resume.tex.j2
tests/: conftest.py  test_fabrication.py
tests/fixtures/: fabrication_jd.txt
tests/fixtures/fabrication_profile/: education.json  experience.json  meta.json  skills.json
web/: package-lock.json  package.json
web/app/: layout.tsx
web/app/about/: page.tsx
web/app/education/: page.tsx
web/app/experience/: page.tsx
web/app/generate/: page.tsx
web/app/projects/: page.tsx
web/app/skills/: page.tsx
web/components/: sidebar.tsx
web/lib/: api.ts
