[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailorloop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2.0",
    "google-genai>=1.0",
    "structlog>=24.0",
    "jinja2>=3.1",
    "click>=8.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
tailorloop = "tailorloop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tailorloop"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
